# iss-tracker

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-17-iss-tracker.md
docs/superpowers/specs/: 2026-05-17-iss-tracker-design.md
src/iss_tracker/: braille.py  cli.py  globe.py  iss_api.py  land_mask.py  main.py  projection.py  theme.py  tracker.py  trail.py  ui.py
tests/: test_braille.py  test_iss_api.py  test_land_mask.py  test_projection.py  test_smoke.py  test_trail.py
