[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iss-tracker"
version = "0.1.0"
description = "Live ISS position on a rotating Braille globe in your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
iss-tracker = "iss_tracker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iss_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
